add new tests and refactor exists